--- a/index.html
+++ b/index.html
@@ -19,41 +19,45 @@
     <header class="header">
       <div aria-hidden="true" class="decorated-zone">
         <div aria-hidden="true" class="header__dark-theme-decoration"></div>
-        <nav class="header__theme-menu">
-          <ul class="header__theme-menu-list">
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_type_light"
-              >
-                День
-              </button>
-            </li>
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
-                disabled
-              >
-                Авто
-              </button>
-            </li>
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_type_dark"
-              >
-                Неон
-              </button>
-            </li>
-          </ul>
-        </nav>
-        <h1 class="title header__title">no focus</h1>
-        <p class="header__quote title-decoration">
-          Что делать, когда не можешь делать ничего Или почему нам так сложно
-          сконцентрироваться, особенно когда очень надо
-        </p>
+        <div class="header-container">
+          <nav class="header__theme-menu">
+            <ul class="header__theme-menu-list">
+              <li class="header__theme-menu-item">
+                <button
+                  class="header__theme-menu-button header__theme-menu-button_type_light"
+                >
+                  День
+                </button>
+              </li>
+              <li class="header__theme-menu-item">
+                <button
+                  class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
+                  disabled
+                >
+                  Авто
+                </button>
+              </li>
+              <li class="header__theme-menu-item">
+                <button
+                  class="header__theme-menu-button header__theme-menu-button_type_dark"
+                >
+                  Неон
+                </button>
+              </li>
+            </ul>
+          </nav>
+          <h1 class="title header__title">no focus</h1>
+          <div class="header__quote-container">
+            <p class="header__quote title-decoration">
+              Что делать, когда не можешь делать ничего Или почему нам так
+              сложно сконцентрироваться, особенно когда очень надо
+            </p>
+          </div>
+        </div>
       </div>
     </header>
     <main>
-      <section class="section">
+      <article class="section about">
         <h2 class="section__title">Почему сосредоточиться так сложно</h2>
         <div class="section__content">
           <h3 class="section__content-subtitle title-decoration">
@@ -67,6 +71,7 @@
             <a
               class="section__content-description-link"
               href="https://pmc.ncbi.nlm.nih.gov/articles/PMC7075496/"
+              target="_blank"
               >выяснили</a
             >, что мозгу тяжело концентрироваться даже на двух делах
             одновременно. А когда в поле внимания попадает несколько важных
@@ -88,47 +93,49 @@
             тем больше удовольствия получаешь.
           </p>
         </div>
-      </section>
-      <section class="section">
+      </article>
+      <article class="section question">
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
-        <div class="section__content">
-          <h3 class="section__content-subtitle title-decoration">
-            Многозадачность
-          </h3>
-          <p class="section__content-description">
-            Как концентрация может снижаться из-за… концентрации? Любая
-            стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
-            мозг постоянно «сканировать» окружающую среду на предмет опасности.
-            Например, читать новости вместо работы. Но быть собранными всё время
-            — невозможно. Концентрация — мышца, и она может не выдержать, если
-            не давать ей отдохнуть.
-          </p>
+        <div class="section__container">
+          <div class="section__content">
+            <h3 class="section__content-subtitle title-decoration">
+              Многозадачность
+            </h3>
+            <p class="section__content-description">
+              Как концентрация может снижаться из-за… концентрации? Любая
+              стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
+              мозг постоянно «сканировать» окружающую среду на предмет опасности.
+              Например, читать новости вместо работы. Но быть собранными всё время
+              — невозможно. Концентрация — мышца, и она может не выдержать, если
+              не давать ей отдохнуть.
+            </p>
+          </div>
+          <div class="section__content">
+            <h3 class="section__content-subtitle title-decoration">Еда</h3>
+            <p class="section__content-description">
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+              доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+              эта энергия также быстро, как и приходит. А мы в результате попадаем
+              на «углеводные качели»: как только действие «быстрых углеводов»
+              заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
+              больше быстрых углеводов.
+            </p>
+          </div>
+          <div class="section__content">
+            <h3 class="section__content-subtitle title-decoration">Гаджеты</h3>
+            <p class="section__content-description">
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+              наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
+              утятами. В результате мозг пытается переключиться с одной задачи на
+              другую — и просто не может. А чтобы вернуться к состоянию полной
+              концентрации, человеку в среднем нужно 20 минут. Вот и получается,
+              что чем больше времени мы проводим в гаджетах, тем больше времени
+              затем нужно, чтобы вернуться к работе.
+            </p>
+          </div>
         </div>
-        <div class="section__content">
-          <h3 class="section__content-subtitle title-decoration">Еда</h3>
-          <p class="section__content-description">
-            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
-            доставляют в мозг энергию и помогают ему лучше работать. Но уходит
-            эта энергия также быстро, как и приходит. А мы в результате попадаем
-            на «углеводные качели»: как только действие «быстрых углеводов»
-            заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
-            больше быстрых углеводов.
-          </p>
-        </div>
-        <div class="section__content">
-          <h3 class="section__content-subtitle title-decoration">Гаджеты</h3>
-          <p class="section__content-description">
-            Да-да, это та самая ситуация, когда на экране ноутбука — код, в
-            наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
-            утятами. В результате мозг пытается переключиться с одной задачи на
-            другую — и просто не может. А чтобы вернуться к состоянию полной
-            концентрации, человеку в среднем нужно 20 минут. Вот и получается,
-            что чем больше времени мы проводим в гаджетах, тем больше времени
-            затем нужно, чтобы вернуться к работе.
-          </p>
-        </div>
-      </section>
-      <section class="section">
+      </article>
+      <article class="section advice">
         <h2 class="section__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
@@ -137,9 +144,9 @@
           5 простых (на самом деле не очень) советов
         </h3>
         <div class="section__content">
-          <h3 class="section__content-subtitle title-decoration">
+          <h4 class="section__content-subtitle title-decoration">
             Представьте небо и облака
-          </h3>
+          </h4>
           <p class="section__content-description">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
             успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
@@ -152,9 +159,9 @@
           </p>
         </div>
         <div class="section__content">
-          <h3 class="section__content-subtitle title-decoration">
+          <h4 class="section__content-subtitle title-decoration">
             Включите музыку
-          </h3>
+          </h4>
           <p class="section__content-description">
             Но не любую, и не любимую. Любимая может быть связана с сильными
             положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -163,14 +170,15 @@
           </p>
         </div>
         <div class="section__content">
-          <h3 class="section__content-subtitle title-decoration">
+          <h4 class="section__content-subtitle title-decoration">
             Прогуляйтесь
-          </h3>
+          </h4>
           <p class="section__content-description">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
             <a
               class="section__content-description-link"
               href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+              target="_blank"
               >показал</a
             >, что созерцание природы повышает концентрацию, в то время как
             после просмотра городских пейзажей она наоборот понижается. Можно
@@ -180,9 +188,9 @@
           </p>
         </div>
         <div class="section__content">
-          <h3 class="section__content-subtitle title-decoration">
+          <h4 class="section__content-subtitle title-decoration">
             Хорошо ешьте
-          </h3>
+          </h4>
           <p class="section__content-description">
             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
             которые препятствуют резким скачкам сахара в крови. Например, с
@@ -191,7 +199,7 @@
           </p>
         </div>
         <div class="section__content">
-          <h3 class="section__content-subtitle title-decoration">Читайте</h3>
+          <h4 class="section__content-subtitle title-decoration">Читайте</h4>
           <p class="section__content-description">
             Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
             прочитать пост в соцсети, достаточно нескольких минут или даже
@@ -199,8 +207,8 @@
             часов и круто тренирует направленное внимание.
           </p>
         </div>
-      </section>
-      <section class="section">
+      </article>
+      <article class="section images">
         <div class="section__content">
           <h3 class="section__content-subtitle title-decoration">
             А можно в картинках?
@@ -238,7 +246,7 @@
             />
           </div>
         </div>
-      </section>
+      </article>
     </main>
     <footer class="footer">
       <div aria-hidden="true" class="decorated-zone">
