--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
           </nav>
           <h1 class="title header__title">no focus</h1>
           <div class="header__quote-container">
-            <p class="header__quote title-decoration">
-              Что делать, когда не можешь делать ничего Или почему нам так
-              сложно сконцентрироваться, особенно когда очень надо
+            <p class="header__quote title-decoration">Что делать, когда не можешь делать ничего
+              Или почему нам так сложно сконцентрироваться, особенно когда очень надо
             </p>
           </div>
         </div>
