--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
-    <link rel="icon" href="images/favicon.ico" sizes="any" />
-    <link rel="icon" href="images/favicon.svg" type="image/svg+xml" />
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/globals.css" />
-    <link rel="stylesheet" href="./styles/variables.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/dark.css" />
-    <link rel="stylesheet" href="./styles/light.css" />
+    <link rel="icon" href="favicon.ico" sizes="any" />
+    <link rel="icon" href="../images/favicon.svg" type="image/svg+xml" />
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
@@ -219,31 +213,31 @@
             <div class="section__content__image-container">
               <img
                 loading="lazy"
-                src="images/sunset.png"
+                src="../images/sunset.png"
                 alt="Sunset image"
                 class="section__content-image"
               />
               <img
                 loading="lazy"
-                src="images/ice-cream.png"
+                src="../images/ice-cream.png"
                 alt="Ice cream image"
                 class="section__content-image"
               />
               <img
                 loading="lazy"
-                src="images/tape.png"
+                src="../images/tape.png"
                 alt="Tape image"
                 class="section__content-image"
               />
               <img
                 loading="lazy"
-                src="images/books.png"
+                src="../images/books.png"
                 alt="Books image"
                 class="section__content-image"
               />
               <img
                 loading="lazy"
-                src="images/street.png"
+                src="../images/street.png"
                 alt="Street image"
                 class="section__content-image"
               />
@@ -257,6 +251,6 @@
         <p class="title footer__title">focus</p>
       </div>
     </footer>
-    <script src="./scripts/script.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
