--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <link rel="icon" href="favicon.ico" sizes="any" />
-    <link rel="icon" href="../images/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="./favicon.ico" type="image/svg+xml" />
     <title>Сложно сосредоточиться</title>
   <link rel="icon" href="favicon.ico"><script defer src="bundle.js"></script><link href="main.css" rel="stylesheet"></head>
   <body class="page">
