--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.ico" sizes="any" />
     <link rel="icon" href="./favicon.ico" type="image/svg+xml" />
     <title>Сложно сосредоточиться</title>
-  <link rel="icon" href="favicon.ico"><script defer src="bundle.js"></script><link href="main.css" rel="stylesheet"></head>
+  <link rel="icon" href="/slozhno-sosredotochitsya/favicon.ico"><script defer src="/slozhno-sosredotochitsya/bundle.js"></script><link href="/slozhno-sosredotochitsya/main.css" rel="stylesheet"></head>
   <body class="page">
     <header class="header">
       <div aria-hidden="true" class="decorated-zone">
