--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.ico" sizes="any" />
     <link rel="icon" href="./favicon.ico" type="image/svg+xml" />
     <title>Сложно сосредоточиться</title>
-  <link rel="icon" href="/slozhno-sosredotochitsya/favicon.ico"><script defer src="/slozhno-sosredotochitsya/bundle.js"></script><link href="/slozhno-sosredotochitsya/main.css" rel="stylesheet"></head>
+  <link rel="icon" href="favicon.ico"><script defer src="bundle.js"></script><link href="main.css" rel="stylesheet"></head>
   <body class="page">
     <header class="header">
       <div aria-hidden="true" class="decorated-zone">
@@ -213,31 +213,31 @@
             <div class="section__content__image-container">
               <img
                 loading="lazy"
-                src="../images/sunset.png"
+                src="images/sunset.png"
                 alt="Sunset image"
                 class="section__content-image"
               />
               <img
                 loading="lazy"
-                src="../images/ice-cream.png"
+                src="images/ice-cream.png"
                 alt="Ice cream image"
                 class="section__content-image"
               />
               <img
                 loading="lazy"
-                src="../images/tape.png"
+                src="images/tape.png"
                 alt="Tape image"
                 class="section__content-image"
               />
               <img
                 loading="lazy"
-                src="../images/books.png"
+                src="images/books.png"
                 alt="Books image"
                 class="section__content-image"
               />
               <img
                 loading="lazy"
-                src="../images/street.png"
+                src="images/street.png"
                 alt="Street image"
                 class="section__content-image"
               />
