--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <link rel="icon" href="favicon.ico" sizes="any" />
-    <link rel="icon" href="../images/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="./favicon.ico" type="image/svg+xml" />
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
@@ -213,31 +213,31 @@
             <div class="section__content__image-container">
               <img
                 loading="lazy"
-                src="../images/sunset.png"
+                src="images/sunset.png"
                 alt="Sunset image"
                 class="section__content-image"
               />
               <img
                 loading="lazy"
-                src="../images/ice-cream.png"
+                src="images/ice-cream.png"
                 alt="Ice cream image"
                 class="section__content-image"
               />
               <img
                 loading="lazy"
-                src="../images/tape.png"
+                src="images/tape.png"
                 alt="Tape image"
                 class="section__content-image"
               />
               <img
                 loading="lazy"
-                src="../images/books.png"
+                src="images/books.png"
                 alt="Books image"
                 class="section__content-image"
               />
               <img
                 loading="lazy"
-                src="../images/street.png"
+                src="images/street.png"
                 alt="Street image"
                 class="section__content-image"
               />
